small form h4 spacing fix

--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -221,6 +221,9 @@ textarea {
         @include max(xxs) {
             margin-bottom: 16px;
         }
+        &:first-child {
+            margin-top: 0;
+        }
     }
     section {
         &.two-columns {
